--- a/rn-first/package.json
+++ b/rn-first/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "expo": "^35.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
